fixed profile picture issue on mobile

--- a/styles/sass/_contact.scss
+++ b/styles/sass/_contact.scss
@@ -74,7 +74,7 @@
     height: 100%;
     width: 100%;
     border: 0.5rem solid var(--textColor);
-    background-image: url(https://cdn.icon-icons.com/icons2/546/PNG/512/1455554992_users-14_icon-icons.com_53277.png);
+    background-image: url(../assets/girlGlasses.png);
     background-size: cover;
     background-position: center;
   }
