--- a/styles/sass/_home.scss
+++ b/styles/sass/_home.scss
@@ -39,7 +39,7 @@
   .picOfYou {
     width: 85%;
     height: 60%;
-    background-image: url(https://cdn.icon-icons.com/icons2/546/PNG/512/1455554992_users-14_icon-icons.com_53277.png);
+    background-image: url(../assets/girlGlasses.png);
     background-size: cover;
     background-position: center;
     border-radius: 2rem;
