--- a/styles/styles.css
+++ b/styles/styles.css
@@ -604,7 +604,7 @@ button:hover, button:focus {
 .homePage .picOfYou {
   width: 85%;
   height: 60%;
-  background-image: url(https://cdn.icon-icons.com/icons2/546/PNG/512/1455554992_users-14_icon-icons.com_53277.png);
+  background-image: url(../assets/girlGlasses.png);
   background-size: cover;
   background-position: center;
   border-radius: 2rem;
@@ -1659,7 +1659,7 @@ button:hover, button:focus {
   height: 100%;
   width: 100%;
   border: 0.5rem solid var(--textColor);
-  background-image: url(https://cdn.icon-icons.com/icons2/546/PNG/512/1455554992_users-14_icon-icons.com_53277.png);
+  background-image: url(../assets/girlGlasses.png);
   background-size: cover;
   background-position: center;
 }
